--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "test": "ng test",
     "lint": "ng lint",
     "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
     "cypress:open:prod": "cypress open -e TARGET_ENV=prod",
-    "cypress:run:prod": "cypress run -e TARGET_ENV=prod"
+    "cypress:run:prod": "cypress run -e TARGET_ENV=prod",
+    "clean:report": "rimraf cypress/reports",
+    "test:functional-report": "node cypress/report_config/cucumber-html-report.js",
+    "test:functional": "run-s -c clean-reports cypress:run test:functional-report"
   },
   "private": true,
   "dependencies": {
@@ -24,7 +28,8 @@
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.8.26",
+    "npm-run-all": "4.1.5"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1001.4",
@@ -48,6 +53,7 @@
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
+    "rimraf": "^3.0.2",
     "ts-loader": "^6.2.1",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
@@ -55,7 +61,7 @@
     "webpack": "4.44.2"
   },
   "cypress-cucumber-preprocessor": {
-    "nonGlobalStepDefinitions": true,
+    "nonGlobalStepDefinitions": false,
     "step_definitions": "cypress/integration/",
     "cucumberJson": {
       "generate": true,
